# wassup

./: .gitmodules  Cargo.toml  LICENSE  README.md  bench_results.json
bench/: Cargo.toml
bench/src/: main.rs
benches/: superoptimize.rs  superoptimize_length.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: integration.rs
encoding/: Cargo.toml
encoding/benches/: transition.rs
encoding/src/: constants.rs  execution.rs  function.rs  instructions.rs  lib.rs  state.rs  value_type.rs
encoding/tests/: spec_tests.rs
src/: block.rs  encoding.rs  lib.rs
src/encoding/: spec_tests.rs
tests/: public_interface.rs
