[workspace]
members = ["cli"]

[package]
name = "wassup"
version = "0.1.0"
authors = ["Julius Rakow <julius@rakow.me>"]
edition = "2018"

[dependencies]
parity-wasm = "0.38.0"
z3 = { path = "../z3.rs/z3" }
rayon = "1.0.3"

[dev-dependencies]
criterion = "0.2.11"
wabt = "0.7.4"

[[bench]]
name = "superoptimize"
harness = false
