[workspace]
members = [
	"cli",
	"encoding",
]

[package]
name = "wassup"
version = "0.1.0"
authors = ["Julius Rakow <julius@rakow.me>"]
edition = "2018"

[dependencies]
either = "1.5.2"
parity-wasm = "0.38.0"
rayon = "1.0.3"
wassup-encoding = { path = "encoding" }
z3 = { path = "../z3.rs/z3" }

[dev-dependencies]
criterion = "0.2.11"
wabt = "0.7.4"

[[bench]]
name = "superoptimize"
harness = false

[[bench]]
name = "superoptimize_length"
harness = false
