[package]
name = "wassup-bench"
description = "A WebAssembly Superoptimizer"
version = "0.1.0"
authors = ["Julius Rakow <julius@rakow.me>"]
edition = "2018"

[dependencies]
criterion = "0.2.11"
parity-wasm = "0.38.0"
serde_json = "1.0.40"
wassup = { path = ".." }
wassup-encoding = {path = "../encoding" }
