[package]
name = "wassup-cli"
description = "A WebAssembly Superoptimizer"
version = "0.1.0"
authors = ["Julius Rakow <julius@rakow.me>"]
edition = "2018"

[[bin]]
name = "wassup"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
parity-wasm = "0.38.0"
wabt = "0.7.4"
wassup = { path = ".." }

[dev-dependencies]
assert_cli = "0.6.3"
