[package]
name = "wassup-encoding"
version = "0.1.0"
authors = ["Julius Rakow <julius@rakow.me>"]
edition = "2018"

[dependencies]
either = "1.5.2"
log = "0.4.8"
parity-wasm = "0.38.0"
z3 = { path = "../../z3.rs/z3" }

[dev-dependencies]
criterion = "0.2.11"
wabt = "0.7.4"

[[bench]]
name = "transition"
harness = false
